<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/sign_up_text"
        android:textColor="@color/light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/type_username"
        android:inputType="text"
        android:paddingBottom="16dp"
        android:shadowColor="@color/light"
        android:textColor="@color/light"
        android:textColorHighlight="@color/primary"
        android:textColorHint="@color/light"
        android:textColorLink="@color/light"
        app:backgroundTint="@color/light"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/type_password"
        android:inputType="textPassword"
        android:paddingBottom="16dp"
        android:shadowColor="@color/light"
        android:textColor="@color/light"
        android:textColorHighlight="@color/primary"
        android:textColorHint="@color/light"
        android:textColorLink="@color/light"
        app:backgroundTint="@color/light"
        app:layout_constraintEnd_toEndOf="@+id/inputUsername"
        app:layout_constraintStart_toStartOf="@+id/inputUsername"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingBottom="16dp"
        android:shadowColor="@color/light"
        android:textColor="@color/light"
        android:textColorHighlight="@color/primary"
        android:textColorHint="@color/light"
        android:textColorLink="@color/light"
        app:backgroundTint="@color/light"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/light"
        android:text="@string/register"
        android:textColor="@color/primary"
        android:textColorHighlight="@color/primary"
        android:textColorHint="@color/primary"
        android:textColorLink="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/light"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@+id/inputConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/inputConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword"
        app:rippleColor="@color/primary" />

</androidx.constraintlayout.widget.ConstraintLayout>