<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".fragments.ChooseRecipientFragment">

    <EditText
        android:id="@+id/inputAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:backgroundTint="@color/light"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingBottom="16dp"
        android:shadowColor="@color/light"
        android:textColor="@color/light"
        android:textColorHighlight="@color/light"
        android:textColorHint="@color/light"
        android:textColorLink="@color/primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="160dp"
        android:text="@string/recipient"
        android:textColor="@color/light"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/light"
        android:drawableEnd="@drawable/ic_next"
        android:drawableRight="@drawable/ic_next"
        android:text="@string/next"
        android:textColor="@color/primary"
        android:textColorHighlight="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/light"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="@+id/inputAmount"
        app:layout_constraintTop_toBottomOf="@+id/inputAmount"
        app:rippleColor="@color/primary" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:drawableEnd="@drawable/ic_cancel"
        android:drawableRight="@drawable/ic_cancel"
        android:text="@string/cancel"
        android:textColor="@color/primary"
        android:textColorHighlight="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/light"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@+id/inputAmount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnNext"
        app:layout_constraintTop_toTopOf="@+id/btnNext"
        app:rippleColor="@color/primary" />
</androidx.constraintlayout.widget.ConstraintLayout>