<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".fragments.MainFragment">

    <Button
        android:id="@+id/btViewTransactions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/light"
        android:drawableRight="@drawable/ic_view"
        android:minHeight="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/view_transactions"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/light"
        app:cornerRadius="4dp"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/primary" />

    <Button
        android:id="@+id/btSendMoney"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@color/light"
        android:drawableRight="@drawable/ic_send"
        android:minHeight="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/send_money"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/light"
        app:cornerRadius="4dp"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="@+id/btViewTransactions"
        app:layout_constraintStart_toStartOf="@+id/btViewTransactions"
        app:layout_constraintTop_toBottomOf="@+id/btViewTransactions"
        app:rippleColor="@color/primary" />

    <Button
        android:id="@+id/btViewBalance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@color/light"
        android:drawableRight="@drawable/ic_view"
        android:minHeight="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/view_balance"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/light"
        app:cornerRadius="4dp"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="@+id/btSendMoney"
        app:layout_constraintStart_toStartOf="@+id/btSendMoney"
        app:layout_constraintTop_toBottomOf="@+id/btSendMoney"
        app:rippleColor="@color/primary" />
</androidx.constraintlayout.widget.ConstraintLayout>